--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,6 @@
   <title>Document</title>
 </head>
 <body>
-  <app-product-page></app-product-page>
+    <app-product-list></app-product-list>
 </body>
 </html>
